--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <nav class="header-navigation">
         <a href="./index.html" class="header-logo link">Web<span class="header-span">Studio</span></a>
         <ul class="header-list list">
-           <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-           <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+           <li class="header-item">
+            <a class="header-link link active" href="./index.html">Studio</a>
+        </li>
+           <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+        </li>
            <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
         </ul>
     </nav>
@@ -34,7 +38,7 @@
         <section class="solutions">
         <div class="container">    
             <h1 class="solutions-title">Effective Solutions for Your Business</h1>
-            <button class="solutions-btn" type="button">Order Service</button>
+            <button class="solutions-btn" data-modal-open type="button">Order Service</button>
         </div>
         </section>
         <section class="principles">
@@ -313,5 +317,16 @@
         </div>
     </div>    
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close" data-modal-close>
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 </html>
