--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <a href="./index.html" class="header-logo link">Web<span class="header-span">Studio</span></a>
             <ul class="header-list list">
                <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-               <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+               <li class="header-item"><a class="header-link link active" href="./portfolio.html">Portfolio</a></li>
                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
@@ -42,56 +42,92 @@
                     <li class="portfolio-item"><button class="portfolio-btn" type="button">Marketing</button></li>
                 </ul>
                 <ul class="portfolio-list-photo list">
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/interface.jpg" alt="interface" width="360" height="300">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                    <div class="portfolio-cover-wrap">
+                        <img src="./images/interface.jpg" alt="interface" width="360" height="300">
+                    <p class="portfolio-cover-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum et esse aperiam quos facilis? Qui quam incidunt beatae deserunt atque odio fugiat delectus cumque tempore numquam. Aut quidem molestias reprehenderit?</p>
+                    </div>
                     <div class="card-container">   
                         <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
                         <p class="portfolio-text-photo">App</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/qr.jpg" alt="qr" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                    <div class="portfolio-cover-wrap">
+                        <img src="./images/qr.jpg" alt="qr" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore a laborum optio dolores! Amet aut repellendus blanditiis. Facilis saepe delectus, itaque voluptas aliquid commodi eligendi sapiente sunt tempora quo!</p>
+                    </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Cashless Payment</h2>
                         <p class="portfolio-text-photo">Marketing</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/laptop.jpg" alt="app" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/laptop.jpg" alt="app" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>    
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Meditation App</h2>
                         <p class="portfolio-text-photo">App</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/car.jpg" alt="car" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/car.jpg" alt="car" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Taxi Service</h2>
                         <p class="portfolio-text-photo">Marketing</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/smartphone.jpg" alt="smartphone" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/smartphone.jpg" alt="smartphone" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Screen Illustrations</h2>
                         <p class="portfolio-text-photo">Design</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/woman.jpg" alt="woman" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/woman.jpg" alt="woman" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Online Courses</h2>
                         <p class="portfolio-text-photo">Marketing</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/instruction.jpg" alt="instruction" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/instruction.jpg" alt="instruction" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
                         <p class="portfolio-text-photo">Design</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/grocceries.jpg" alt="grocceries" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/grocceries.jpg" alt="grocceries" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Organic Food</h2>
                         <p class="portfolio-text-photo">Web Site</p></a>
                     </div>
                     </li>
-                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#"><img src="./images/cofee.jpg" alt="cofee" width="360" height="300">
-                    <div class="card-container">
+                    <li class="portfolio-item-photo"><a class="portfolio-link link" href="#">
+                        <div class="portfolio-cover-wrap">
+                        <img src="./images/cofee.jpg" alt="cofee" width="360" height="300">
+                        <p class="portfolio-cover-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt officiis expedita quos. Laboriosam soluta nobis explicabo illum, nam sint earum repudiandae deserunt dolor facilis nostrum cumque! Assumenda, odio in?</p>
+                        </div>
+                        <div class="card-container">
                         <h2 class="portfolio-subtitle">Fresh Coffee</h2>
                         <p class="portfolio-text-photo">Web Site</p></a>
                     </div>
